# lab-github-actions

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  dot-env-example  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: workflow.yml
service/: __init__.py  config.py  error_handlers.py  models.py  routes.py
service/common/: error_handlers.py  log_handler.py  status.py
tests/: test_models.py  test_routes.py  test_service.py
